fixes #51 upgrade to simple pool with Http2Client